# fastapi-workshop

./: README.md  main.py  pyproject.toml  save_to_db.py  settings.py
data/: __init__.py  movies.py
schema/dataclass/: __init__.py  movie.py
schema/enums/: __init__.py  language.py
schema/models/: __init__.py  movie.py
